--- a/skyfolk/templates/account/amigos.html
+++ b/skyfolk/templates/account/amigos.html
@@ -32,30 +32,38 @@
     <div title="Grupo privado" class="fa fa-lock icon icon-lock2"></div>
   </div>
 </fieldset>
-<section id="section" style="display:none;">
-  <span class="fontawesome-remove" title="Cerrar"></span>
-<img class="group" src="http://uxrepo.com/static/icon-sets/elusive/svg/group.svg">
-<ul>
-<li><input type="text" target="group" placeholder="Nombre del grupo"></li>
-<li><input type="text" target="local" placeholder="Lugar"></li>
-<li><select>
-<option value="1" title="Todos pueden enviar invitaciones">Público</option>
-<option value="2" title="Sólo tu puedes enviar invitaciones">Privado</option>
-</select>
-</li>
-<li><input type="search" placeholder="Buscar amigo..."></li>
-<li>
-  <div class="contactos">
-    <ul class="cont">
-      <li><img src="http://piposerrano.files.wordpress.com/2008/12/pipo-perfil.jpg"><a>Nombre Apellido</a></li>
-      <li><img src="http://piposerrano.files.wordpress.com/2008/12/pipo-perfil.jpg"><a>Nombre Apellido</a></li>
-      <li><img src="http://piposerrano.files.wordpress.com/2008/12/pipo-perfil.jpg"><a>Nombre Apellido</a></li>
-      <li><img src="http://piposerrano.files.wordpress.com/2008/12/pipo-perfil.jpg"><a>Nombre Apellido</a></li>
-      <li><img src="http://piposerrano.files.wordpress.com/2008/12/pipo-perfil.jpg"><a>Nombre Apellido</a></li>
-  </div
-  ></li>
-</ul>
-</section>
+  <div class="wrapper" id="section" style="display:none;">
+    <div class="col-md-9 col-ls-12">
+      <img src="https://cdn2.iconfinder.com/data/icons/ios-7-icons/50/user_male2-128.png" class="img-rounded">
+      <form role="form">
+    <div class="form-group">
+      <label for="exampleInputEmail1" class="name">Nombre</label>
+      <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter the group name.">
+    </div>
+    <div class="form-group">
+      <label for="exampleInputPassword1" class="lema">Clave</label>
+      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="(Optional)">
+    </div>
+    <div class="form-group">
+      <label for="exampleInputPassword1" class="lema">Estado</label>
+      <input type="email" class="form-control" id="exampleInputPassword1" placeholder="Introduce un estado.">
+    </div>
+  </form>
+     <div class="relaciones">
+       <h4>Mis contactos</h4>
+       <ul class="ctc">
+         <li><img class="img-circle" src="http://sharpresearchgroup.com/wp-content/uploads/2014/09/538642-user_512x512.png"><a>Marta Sánchez.</a></li>
+         <li><img class="img-circle" src="http://sharpresearchgroup.com/wp-content/uploads/2014/09/538642-user_512x512.png"><a>Marta Sánchez.</a></li>
+       </ul>
+      </div>
+        <div class='search-container'>
+          <input placeholder='Buscar un contacto...' type='text'>
+          <a class='button'>
+            <i class='fontawesome-search'></i>
+          </a>
+    </div>
+    <button type="submit" class="btn btn-primary">Save Changes</button>
+   </div>
 <!-- FIN CREAR NUEVO GRUPO AMIGOS -->
 <div id="content_profile_cards">
 
