--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1414,6 +1414,15 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
   opacity: 0.6;
   position:relative;
   border-radius: 5%;
+  
+	/*CENTRADO*/
+	overflow: hidden;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	margin-top: -100px;
+	margin-left: -292px; /*150px*/
+  
 }
 
 
@@ -1450,7 +1459,7 @@ h1 {
   margin-bottom: 1rem;
 }
 
-button[type="close"] {
+button[type="button"] {
   display: inline-block;
   border-radius: 3px;
   border: none;
