perparando comentarios/publicaciones

--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -11,9 +11,11 @@
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/conf.css" />
 <link rel="stylesheet" href="{{STATIC_URL}}css/colorbox.css" />
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/jquery.gritter.css" />
+<!--  <link rel="stylesheet" href="{{STATIC_URL}}media/bootstrap/css/bootstrap.min.css"/> -->
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" /> 
 <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>-->
 <script src="{{STATIC_URL}}js/jquery.min.js"></script>
+<!--  <script src="{{STATIC_URL}}media/bootstrap/js/bootstrap.min.js"></script> -->
 <script src="{{STATIC_URL}}js/jquery.easytabs.js"></script>
 <script src="{{STATIC_URL}}js/jquery.gritter.js"></script>
 <script src="{{STATIC_URL}}js/profile.js"></script>
@@ -110,7 +112,7 @@ top.window.outerWidth = screen.availWidth;
 </head>
 
 <body>
-<body onLoad="aparecerbola()">
+<body>
 <!-- <div id="oHBContainer"> -->
 <nav class="barrah">
 <ul>
