--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -46,7 +46,7 @@
 
 <div id="panel"> 
 
-  <div id="widget" onClick="cambiopagina()"> 
+  <div id="widget"> 
 <!--
     <div id="middle"></div>
     <div id="linkedin" class="size left"><span class="entypo-users"></span></div>
@@ -177,15 +177,15 @@
                 {% if user.is_authenticated and user.username == user_profile.username %} <!-- Si el usuario esta visitando su propio perfil -->
                    <span id="addfriend" class="entypo-plus" title="Agregar" onclick=AJAX_requestfriend('abort')></span>
                    <span id="ilike_profile" class="entypo-thumbs-up" title="¡Me gusta!" onclick=AJAX_likeprofile('abort')></span>
-                   <span class="entypo-forward" title="Escribir"></span>             
+                   <span id="publish" class="entypo-forward" title="Escribir"></span>             
                 {% elif not user.is_authenticated %} <!-- si es usuario anonimo -->
                    <span id="addfriend" class="entypo-plus" title="Agregar" onclick=AJAX_requestfriend('anonymous')></span>
                    <span id="ilike_profile" class="entypo-thumbs-up" title="¡Me gusta!" onclick=AJAX_likeprofile('anonymous')></span>
-                   <span class="entypo-forward" title="Escribir"></span>            
+                   <span id="publish" class="entypo-forward" title="Escribir"></span>    
                 {% else %} <!-- si es usuario esta visitando un perfil que no es el suyo -->
                    <span id="addfriend" class="entypo-plus" title="Agregar" onclick=AJAX_requestfriend('noabort')></span>
                    <span id="ilike_profile" class="entypo-thumbs-up" title="¡Me gusta!" onclick=AJAX_likeprofile('noabort')></span>
-                   <span class="entypo-forward" title="Escribir"></span>
+                   <span id="publish" class="entypo-forward" title="Escribir"></span>
 
                 {% endif %}
                </span>
@@ -352,7 +352,7 @@
             <button data-close="true" class="close"></button>
             <div class="message-text">Ya estas dentro.</div>
           </div>
-          <div class="message success">
+          <div id="publish-success" class="message success">
             <button data-hide="true" class="close"></button>
             <div class="message-text">Comentario publicado correctamente.</div>
           </div>
@@ -611,7 +611,7 @@
 {% if user.is_authenticated %}
 	<div id="page-wrapper" style="display:none;">
 	  	<h1></h1>
-		<div id="status">Conectando...</div>
+		<div id="status">to {{ user_profile.username }}</div>
 		<form id="message-form2" action="" method="post">{% csrf_token %}
 	
 			{{publicationForm.as_p}}
@@ -625,11 +625,12 @@
 		    <button class="fontawesome-map-marker"></button>
 	                  
 		</form>
-		
-	
 	</div>
 {% endif %}
 
+<!-- ALERTS BOOTSTRAP (NO USAR TODAVIA) -->
+<div id="friend-success" class="alert alert-success alert-dismissible" role="alert" hidden><button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>You have added a friend!</div>
+<div id="publish-success" class="alert alert-success alert-dismissible" role="alert" hidden><button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>You have successfully posted!</div>
 
 
 
