--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -381,6 +381,34 @@
 	
 	         	</div>
 				<div id="tab-comentarios">
+
+
+					{% for item in publications_top15 %}
+					      
+						<div class="wrapper">
+							  <div id="box">
+							        <input id="profile" type="checkbox" checked> 
+							        <label class="popo" for="profile">
+							        <img id="avatar-publication" src="{{STATIC_URL}}img/generic-avatar.png" alt="img" class="img-responsive">
+							        </label>
+							        <span class="entypo-thumbs-up" title="¡Me gusta!"></span> 
+							        <span class="entypo-forward" title="Responder"></span>
+							    <span class="entypo-plus" title="Añadir a..."></span>
+							  </div>
+							  <article class="articulo">
+							    <h2 class="h22"><a href="/profile/{{ item.user__username }}" >{{item.user__username}}</a> mentioned you</h2>
+							    <div class="parrafo comment">
+							      <a target="_blank">{{item.from_publication__created}}</a> {{item.from_publication__content}}
+							    </div>
+							  </article>
+					  	</div>
+					  	
+					
+					{% endfor %}
+					
+				
+					
+					<!--
 					<div class="wrapper">
 						  <div id="box">
 						        <input id="profile" type="checkbox" checked> 
@@ -397,7 +425,7 @@
 						      <a href="file:///C:/Users/Adrian/Desktop/skyfolk/perfil.html" target="_blank">_adriancarayol</a> How would you like to intern with us this summer?
 						    </p>
 						  </article>
-						  <!-- OPTIONES FIJAS -->
+						
 						  <ul class="optionsfixed">
 						  <li class="fontawesome-eye-open"></li>
 						  <li class="fontawesome-star"></li>
@@ -486,6 +514,7 @@
 							    </p>
 							  </article>
 						</div>
+						-->
 				</div>
 				<div id="tab-amigos">
 				
@@ -615,8 +644,8 @@
 		<form id="message-form2" action="" method="post">{% csrf_token %}
 	
 			{{publicationForm.as_p}}
-			<input type="text" name="userprofileid" value="{{ user_profile.profile.id }}" hidden>
-			<input type="text" name="emitterid" value="{{ user.profile.id }}" hidden>
+			<input type="text" name="userprofileid" value="{{ user_profile.pk }}" hidden>
+			<input type="text" name="emitterid" value="{{ user.pk }}" hidden>
 		    <button type="submit" id="sendformpubli">Enviar</button>
 		    <!--  <input type="submit" id="sendformpubli" value="Submit Feedback" /> -->
 		    <button type="button" id="close">Cerrar</button>
