--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -44,13 +44,13 @@
 
 {% block content %}
 
-<div id="panel"> 
+<!--<div id="panel"> 
 
   <div id="widget"> 
 <!--
     <div id="middle"></div>
     <div id="linkedin" class="size left"><span class="entypo-users"></span></div>
--->
+--> <!--
     <div id="middle"><div class="entypo-user"></div></div>
 
     <div id="linkedin" class="size left"><a href="/friends"><span class="entypo-users"></span></a></div>
@@ -59,7 +59,23 @@
     <div id="twitter" class="size right"><a href="{% url 'account_logout' %}"><span class="entypo-logout"></span></div></a>
 
   </div>
-</div>
+</div>-->
+<!-- NEW MENU FLOTANTE -->
+
+<nav class="circular-menu">
+
+  <div class="circle">
+    <a href="" class="fa fa-home fa-2x"></a>
+    <a href="" class="fa fa-user fa-2x"></a>
+    <a href="" class="fa fa-sign-out fa-2x"></a>
+    <a href="" class="fa fa-cog fa-2x">
+    <a href="" class="fa fa-envelope fa-2x"></a>
+  </div>
+  
+  <a href="" class="profile"></a>
+
+</nav>
+
 
  <div class="Mensaje" id="js-timer">
   <div class="Mensaje-icon">
