--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -65,14 +65,14 @@
 <nav class="circular-menu">
 
   <div class="circle">
-    <a href="" class="fa fa-home fa-2x"></a>
-    <a href="" class="fa fa-user fa-2x"></a>
-    <a href="" class="fa fa-sign-out fa-2x"></a>
-    <a href="" class="fa fa-cog fa-2x">
-    <a href="" class="fa fa-envelope fa-2x"></a>
+    <a href="#" class="fa fa-home fa-2x"></a>
+    <a href="#" class="fa fa-user fa-2x"></a>
+    <a href="#" class="fa fa-sign-out fa-2x"></a>
+    <a href="#" class="fa fa-cog fa-2x">
+    <a href="#" class="fa fa-envelope fa-2x"></a>
   </div>
   
-  <a href="" class="profile"></a>
+  <a class="profile"></a>
 
 </nav>
 
@@ -191,17 +191,17 @@
 
                <span class="informacion">
                 {% if user.is_authenticated and user.username == user_profile.username %} <!-- Si el usuario esta visitando su propio perfil -->
-                   <span id="addfriend" class="entypo-plus" title="Agregar" onclick=AJAX_requestfriend('abort')></span>
-                   <span id="ilike_profile" class="entypo-thumbs-up" title="¡Me gusta!" onclick=AJAX_likeprofile('abort')></span>
-                   <span id="publish" class="entypo-forward" title="Escribir"></span>             
+                   <span id="addfriend" class="fa fa-plus fa-2x" title="Agregar" onclick=AJAX_requestfriend('abort')></span>
+                   <span id="ilike_profile" class="fa fa-heart fa-2x" title="¡Me gusta!" onclick=AJAX_likeprofile('abort')></span>
+                   <span id="publish" class="fa fa-comment-o fa-2x" title="Escribir"></span>             
                 {% elif not user.is_authenticated %} <!-- si es usuario anonimo -->
-                   <span id="addfriend" class="entypo-plus" title="Agregar" onclick=AJAX_requestfriend('anonymous')></span>
-                   <span id="ilike_profile" class="entypo-thumbs-up" title="¡Me gusta!" onclick=AJAX_likeprofile('anonymous')></span>
-                   <span id="publish" class="entypo-forward" title="Escribir"></span>    
+                   <span id="addfriend" class="fa fa-plus fa-2x" title="Agregar" onclick=AJAX_requestfriend('anonymous')></span>
+                   <span id="ilike_profile" class="fa fa-heart fa-2x" title="¡Me gusta!" onclick=AJAX_likeprofile('anonymous')></span>
+                   <span id="publish" class="fa fa-comment-o fa-2x" title="Escribir"></span>    
                 {% else %} <!-- si es usuario esta visitando un perfil que no es el suyo -->
-                   <span id="addfriend" class="entypo-plus" title="Agregar" onclick=AJAX_requestfriend('noabort')></span>
-                   <span id="ilike_profile" class="entypo-thumbs-up" title="¡Me gusta!" onclick=AJAX_likeprofile('noabort')></span>
-                   <span id="publish" class="entypo-forward" title="Escribir"></span>
+                   <span id="addfriend" class="fa fa-plus fa-2x" title="Agregar" onclick=AJAX_requestfriend('noabort')></span>
+                   <span id="ilike_profile" class="fa fa-heart fa-2x" title="¡Me gusta!" onclick=AJAX_likeprofile('noabort')></span>
+                   <span id="publish" class="fa fa-comment-o fa-2x" title="Escribir"></span>
 
                 {% endif %}
                </span>
