--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -72,7 +72,7 @@
     <a href="" class="fa fa-envelope fa-2x"></a>
   </div>
   
-  <a href="" class="profile"></a>
+  <a class="profile"></a>
 
 </nav>
 
