--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -62,16 +62,16 @@
 </div>-->
 <!-- NEW MENU FLOTANTE -->
 
-<nav class="circular-menu">
+  <nav class="circular-menu">
 
   <div class="circle">
     <a href="" class="fa fa-home fa-2x"></a>
-    <a href="" class="entypo-mail"></a>
+    <a href="" class="fa fa-user fa-2x"></a>
     <a href="" class="fa fa-sign-out fa-2x"></a>
     <a href="" class="fa fa-cog fa-2x">
     <a href="" class="fa fa-envelope fa-2x"></a>
   </div>
-  
+
   <a class="profile"></a>
 
 </nav>
