--- a/skyfolk/static/css/widget1.css
+++ b/skyfolk/static/css/widget1.css
@@ -72,7 +72,7 @@
   width: 40px;
   line-height: 40px;
   padding: 10px;
-  background-image: url('https://cdn3.iconfinder.com/data/icons/black-easy/256/535108-user_256x256.png');
+  background-image: url('http://forums.accuweather.com/uploads/photo-14572.jpg');
     background-repeat: no-repeat;
     background-size: 60px;
     background-position: center;
