--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/comentarios.css" />>
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/conf.css" />
 <link rel="stylesheet" href="{{STATIC_URL}}css/colorbox.css" />
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/jquery.gritter.css" />
 <!--  <link rel="stylesheet" href="{{STATIC_URL}}media/bootstrap/css/bootstrap.min.css"/> -->
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" /> 
