--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -24,6 +24,7 @@
 <script src="{{STATIC_URL}}js/noti.js"></script>
 <script src="{{STATIC_URL}}js/notia.js"></script>
 <script src="{{STATIC_URL}}js/jquery.shorten.1.0.js"></script>
+<script src="{{STATIC_URL}}js/newmenu.js"></script>
 
 
 {% block include_files %}{% endblock %}
