--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -24,8 +24,11 @@
 <script src="{{STATIC_URL}}js/noti.js"></script>
 <script src="{{STATIC_URL}}js/notia.js"></script>
 <script src="{{STATIC_URL}}js/jquery.shorten.1.0.js"></script>
-<script src="{{STATIC_URL}}js/newmenu.js"></script>
 
+<!-- NEW MENU -->
+
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 
 {% block include_files %}{% endblock %}
 
