--- a/skyfolk/static/css/widget1.css
+++ b/skyfolk/static/css/widget1.css
@@ -4,193 +4,77 @@
   font-family: 'entypo', sans-serif;
 }
 
-/*body {
-  text-align:center;
-  background:url(http://developer.jmbarcelon.com/Images/blueblurlights.jpg)top center;
-}
-
-p {
-  margin:0;
-  color:transparent;
-  font-size:5em;
-  text-shadow: 1px 3px 6px #EFFDFE,
-                0px 0px 0px #888,
-              1px 4px 6px #EFFDFE;
-}*/
-body{
-  background:url(../img/bg.jpg);
-}
-#1 {
-  
- display:block;
- 
-    filter: alpha(opacity=100);
-    -webkit-transition: opacity 1s linear;
-}
-
-
-
-#widget {
-  background:#eee;
-  color:#fff;
-  width:300px;
-  height:300px;
-  border:5px solid #eee;
-  -webkit-border-radius: 200px;
-  border-radius: 210px;
-  box-shadow:10px 0px 15px #444;
-  position:fixed;
-  left:42.3%;
-  /*margin:100px auto;*/
-  z-index:2;
-  overflow:hidden;
-  top: 87.3%;
-  opacity: 0.4;
-  -moz-transition: margin .2s;
-  transition: margin .2s;
-  -webkit-transition: margin .2s;
-  transition: all .3s ease-in;
+.profile {
+  color: tomato;
+  width: 100px;
+  height: 100px;
+  position: fixed;
+  background-color: white;
+  right: 0%;
+  top: 82%;
+  border-radius: 100%;
+  background-image: url('http://randomuser.me/img/creator_arron.png');
+  background-position:center;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  border-color: #F7FFFD;
   -webkit-transition: all .3s ease-in;
   -moz-transition: all .3s ease-in;
-
+  transition: all .3s ease-in;
+  cursor:pointer;
 }
-#widget:hover {
-  margin-top: -14.355%;
+.profile:hover {
+  background-color: tomato;
+}
+li:nth-child(1) {
+  list-style-type: none;
+  position: absolute;
+  opacity: 0;
+  -webkit-transition: all 0.5s ease-in;
+  -moz-transition: all 0.5s ease-in;
+  transition: all 0.5s ease-in;
+  cursor:pointer;
+  right: 110px;
+  top: -25px;
+}
+li:nth-child(2) {
+  list-style-type: none;
+  position: absolute;
+  right: 35px;
+  opacity: 0;
+  -webkit-transition: all 0.5s ease-in;
+  -moz-transition: all 0.5s ease-in;
+  transition: all 0.5s ease-in;
+  cursor:pointer;
+  top: -40px;
+}
+li:nth-child(3) {
+  list-style-type: none;
+  position: absolute;
+  right: 130px;
+  opacity: 0;
+  -webkit-transition: all 0.5s ease-in;
+  -moz-transition: all 0.5s ease-in;
+  transition: all 0.5s ease-in;
+  cursor:pointer;
+  top: 25px;
+}
+li:nth-child(4) {
+    list-style-type: none;
+  position: absolute;
+  right: 120px;
+  opacity: 0;
+  -webkit-transition: all 0.5s ease-in;
+  -moz-transition: all 0.5s ease-in;
+  transition: all 0.5s ease-in;
+  cursor:pointer;
+  top: 70px;
+}
+.profile:hover > li {
   opacity: 1;
-  border-color: #B3FFE9;
+  transtition: margin-top;
+  margin-top: -7px;
 }
-#middle {
-  padding-top: 0%;
-  width: 47%;
-  height: 45%;
-  background:#ccc;
-  border:5px solid #eee;
-  -webkit-border-radius: 30px;
-        border-radius: 100px;
-  box-shadow:inset 0px 20px 45px #999;
-  position:absolute;
-  left:0;
-  right:0;
-  margin:75px auto;
-  z-index:2;
-  overflow:hidden;
-  font-size:9em;
-  text-shadow:0px 0px 15px #999;
-        background: url('http://skyfolk.herokuapp.com/static/img/bola/2.jpg')
-}
-
-#linkedin {
-  color:rgba(14, 118, 168,0.5);
-  text-shadow: 1px 3px 6px #0e76a8,
-                0px 0px 0px #000,
-              1px 4px 6px #0e76a8;
-  background:#A194E4;
-  -webkit-border-radius:305px 0px 0px 0px;
-  border-radius:305px 0px 0px 0px;
-}
-
-#dribbble {
-  color:rgba(226, 77, 135,0.5);
-    text-shadow: 1px 3px 6px #E24D87,
-                0px 0px 0px #000,
-              1px 4px 6px #E24D87;
-  background:#72FFB0;
-  -webkit-border-radius:0px 205px 0px 0px;
-  border-radius:0px 205px 0px 0px;
-  list-style:none;
-}
-
-#facebook{
-  color:rgba(59, 89, 152,0.5);
-  text-shadow: 1px 3px 6px #3B5998,
-                0px 0px 0px #000,
-              1px 4px 6px #3B5998;
-  background:#B3E9E5;
-  -webkit-border-radius:0px  0px 0px 205px;
-  border-radius:0px  0px 0px 205px;
-}
-
-#twitter {
-  color: #0092AC;
-    text-shadow: 1px 3px 6px #00CEFC,
-                0px 0px 0px #000,
-              1px 4px 6px #00CEFC;
-  background:#B9B9B9;
-  -webkit-border-radius:0px  0px 205px 0px ;
-  border-radius:0px  0px 205px 0px ;
-}
-#twitter span, #facebook span, #dribbble span, #linkedin span{
-margin-left:60px;
-margin-top:25px;
-}
-
-.size {
-  padding-top:15%;
-  font-size:2.5em;
-  margin-bottom:2%;
-  width:49%;
-    height:55%;
-  overflow:hidden;
-}
-
-  .left {
-    float:left;
-  }
-
-  .right {
-    float:right;
-  }
-
-#facebook:hover{
-    color:rgba(255,255,255,0.7);
-    cursor:pointer;
-    }
-    
-
-#linkedin:hover {
-  color:rgba(255,255,255,0.7);
-    cursor:pointer;
-}
-
-
-#dribbble:hover {
-  color:rgba(255,255,255,0.7);
-    cursor:pointer;
-}
-
-
-#twitter:hover {
-  color:rgba(255,255,255,0.7);
-    cursor:pointer;
-}
-#middle{
-
-
-padding-left:4%;
-padding-top:1%;
-
-
-}
-
-
-@media (min-width: 1200px) {
-  #widget:hover {
-    margin-top: -10.655%;
-  }
-}
-
-@media (min-width: 768px) and (max-width: 979px) {
-  #widget:hover {
-    margin-top: -27.355%;
-  }
-}
-@media (max-width: 767px) {
-  #widget:hover {
-    margin-top: -25.355%;
-  }
-}
-@media (max-width: 480px) {
-  #widget:hover {
-    margin-top: -25.355%;
-  }
+li:hover {
+  color: #AEC6CF;
 }
