--- a/skyfolk/static/css/widget1.css
+++ b/skyfolk/static/css/widget1.css
@@ -22,6 +22,7 @@
   -moz-transition: all .3s ease-in;
   transition: all .3s ease-in;
   cursor:pointer;
+  z-index: 9999;
 }
 .profile:hover {
   background-color: tomato;
