--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -60,10 +60,10 @@
   </div>
 </div>
 <nav class="profile">
-      <li class="fa fa-envelope fa-2x"><a href="/friends"></li>
+      <li class="fa fa-envelope fa-2x"><a href="/friends"></li></a>
       <li class="fa fa-home fa-2x"></li>
       <li class="fa fa-users fa-2x"></li>
-      <li class="fa fa-sign-out fa-2x"><a href="{% url 'account_logout' %}"></li>
+      <li class="fa fa-sign-out fa-2x"><a href="{% url 'account_logout' %}"></li></a>
     </nav>
 
 
