--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1122,19 +1122,6 @@ ul.table > li {
 .illustration {
   padding: 0.1em 1em; }
   
-nav.barrah {
-height: 50px;
-margin: 0px;
-width: 100%;
-position: fixed;
-display: block;
-background: #3E9397;
-opacity: 0.8;
-top: 3px;
-z-index: 9999;
-}
-
-
 #closesession{
     font-family: 'Ubuntu', 'Lato', sans-serif;
     font-size:13px;
@@ -1574,67 +1561,6 @@ button:hover {
   color:white;
 }
 
-
-
-
-
-.fontawesome-bell {
-  color: #FFF;
-  float: right;
-  cursor:pointer;
-  text-align:center;
-  font-size: 31px;
-  display: block;
-  position:absolute;
-  margin-right:-33px;
-  margin-top: -7px;
-}
-
-.fontawesome-bell:hover {
-  color: black;
-  border: 3px solid rgb(26, 188, 156);
-  border-right: none;
-  border-top: none;
-  border-left: none;
-}
-
-.notifications .messages {
-  display:block;
-  position:absolute;
-  top:70px;
-  right:100px;
-  width:240px;
-  max-height:240px;
-}
-
-.notifications .messages:before {
-  content:'.';
-  display:block;
-  position:absolute;
-  margin-left:-10px;
-  left:50%;
-  top:-18px;
-  width:0;
-  height:0;
-  color:transparent;
-  border:10px solid black;
-  border-color:transparent transparent white;
-}
-
-.notifications .messages .message {
-  display:block;
-  position:relative;
-  padding:10px;
-  background-color:white;
-  color:black;
-  text-decoration:none;
-}
-
-.notifications .messages .message + .message {
-  border-top:1px solid #e0e0e0;
-}
-
-
 .fontawesome-heart-empty {
   color: pink;
   font-size: 17px;
@@ -1957,4 +1883,87 @@ opacity: 0.7;
 border-top-left-radius: 7px;
 border-top-right-radius: 7px;
 cursor: pointer;
+}
+
+
+
+/* NEW NAV */
+
+body {
+  padding: 0;
+  margin: auto;
+}
+.box-tool {
+  width: 100%;
+  height: 30px;
+  background-color: #779ECB;
+  box-shadow: 1px 1px 1px #f0f0f0;
+}
+input[type="search"] {
+  float: right;
+  right: 200px;
+  position:relative;
+  width: 300px;
+  background-color: #AEC6CF;
+  opacity: 0.6;
+  border: none;
+  height: 20px;
+  top: 5px;
+  text-align: left;
+  display: block;
+  font-family: sans-serif;
+  font-size: 12px;
+  appearance: none;
+  box-shadow: none;
+  outline: none;
+  transition: all .3s ease-in;
+  -webkit-transition: all .3s ease-in;
+  -moz-transition: all .3s ease-in;
+  border-radius: 7px;
+  background-image: url('https://cdn3.iconfinder.com/data/icons/eightyshades/512/11_Search-128.png');
+  background-repeat: no-repeat;
+  background-position: 95%;
+  background-size: 13px;
+  line-height: -1px;
+  padding: 0px 20px;
+}
+input[type="search"]:focus {
+  box-shadow: 2px 2px 2px #69ABDA;
+  background-position: 1%;
+}
+.fa-comment, .fa-bell {
+  color: white;
+  float: right;
+  display: inline-block;
+  position: relative;
+  right: -280px;
+  top: -12px;
+  text-decoration: none;
+  margin-left: 50px;
+  cursor: pointer
+}
+.fa-bars {
+  color: white;
+  float: left;
+  display: inline-block;
+  position: relative;
+  right: 0px;
+  top: -12px;
+  text-decoration: none;
+  margin-left: 50px;
+  cursor: pointer;
+}
+.fa-bell em {
+  background-color: tomato;
+  font-size: 10px;
+  padding: 5px 5px;
+  border-radius: 100%;
+  text-decoration: none;
+  border-top-left-radius: 10px;
+}
+.fa-comment:hover, .fa-bell:hover {
+ -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  transform: scale(1.1);
+  color: #556B75;
 }
