--- a/skyfolk/static/css/buscar.css
+++ b/skyfolk/static/css/buscar.css
@@ -3,12 +3,12 @@
 
 
 /*caja de busqueda*/
-.field {
+/*.field {
 	display: flex;
 	position: absolute;
 	margin: 4.894em auto;
 	width: 901px;/*70%*/
-	height: 38px;
+	/*height: 38px;
 	top: -50px;
 	left: 7%;
 	flex-direction: row;
@@ -29,7 +29,7 @@
 .field>form input[type=text],
 .field>form button {
  /* display:block;*/
- font:1.2em 'Montserrat Alternates';
+ /*font:1.2em 'Montserrat Alternates';
 }
 
 .field>form input[type=text] {
@@ -94,7 +94,7 @@
 	list-style-type: none;
 	margin-top:5px;
 	/*background-color:green;*/
-	height:100%;
+	/*height:100%;
 	width:100%;
 	padding-left:0px;
 
@@ -105,7 +105,7 @@
 	margin-left:0px;
 	font:1.2em 'Montserrat Alternates';
 	/*background-color:red;*/
-	height:100px;
+	/*height:100px;
 	width:100%;
 	padding:18px 12px;
 	border-top:1px solid #a4f4e8;
@@ -114,7 +114,7 @@
 .container-search li .container-img{
 
 	/*margin-top: 15px;*/
-	height:69px;
+	/*height:69px;
 	width:69px;
 	background-color: #ebf4f2;
 	padding:2px;
@@ -126,7 +126,7 @@
 .container-search li .container-img img{
 
 	/*background-color:yellow;*/
-	height:65px;
+	/*height:65px;
 	width:65px;
 
 }
@@ -136,16 +136,16 @@
 	width:65px;
 	background-color:#ebf4f2;
 	/*padding:2px;*/
-	float:left;
+	/*float:left;
 	/*margin-left:15px;*/
-	transform:scale(1.15);
+	/*transform:scale(1.15);
 	  border-radius: 98%;
 
 }
 .container-search li .container-userdata{
 
 	/*background-color:violet;*/
-	height:50px;
+	/*height:50px;
 	width:290px;
 	float:left;
 	margin-left:10px;
@@ -160,7 +160,7 @@
 	height:5px;
 	width:50px;
 	*/
-	text-transform: capitalize;
+	/*text-transform: capitalize;
 
 }
 .container-search li .container-username{
@@ -176,7 +176,7 @@
 
 	/*background-color:blue;*/
 }
-.container-search li .container-actions .item-action{
+/*.container-search li .container-actions .item-action{
 
 
 	padding-left:10px;
@@ -184,7 +184,82 @@
 
 }
 
+/* NEW NAV */
 
+.box-tool {
+  width: 100%;
+  height: 30px;
+  background-color: #779ECB;
+  box-shadow: 1px 1px 1px #f0f0f0;
+}
+input[type="search"] {
+  float: right;
+  right: 200px;
+  position:relative;
+  width: 300px;
+  background-color: #AEC6CF;
+  opacity: 0.6;
+  border: none;
+  height: 20px;
+  top: 5px;
+  text-align: left;
+  display: block;
+  font-family: sans-serif;
+  font-size: 12px;
+  appearance: none;
+  box-shadow: none;
+  outline: none;
+  transition: all .3s ease-in;
+  -webkit-transition: all .3s ease-in;
+  -moz-transition: all .3s ease-in;
+  border-radius: 7px;
+  background-image: url('https://cdn3.iconfinder.com/data/icons/eightyshades/512/11_Search-128.png');
+  background-repeat: no-repeat;
+  background-position: 95%;
+  background-size: 13px;
+  line-height: -1px;
+  padding: 0px 20px;
+}
+input[type="search"]:focus {
+  box-shadow: 2px 2px 2px #69ABDA;
+  background-position: 1%;
+}
+.fa-comment, .fa-bell {
+  color: white;
+  float: right;
+  display: inline-block;
+  position: relative;
+  right: -280px;
+  top: -12px;
+  text-decoration: none;
+  margin-left: 50px;
+  cursor: pointer
+}
+.fa-bars {
+  color: white;
+  float: left;
+  display: inline-block;
+  position: relative;
+  right: 0px;
+  top: -12px;
+  text-decoration: none;
+  margin-left: 50px;
+  cursor: pointer;
+}
+.fa-bell em {
+  background-color: tomato;
+  font-size: 10px;
+  padding: 5px 5px;
+  border-radius: 100%;
+  text-decoration: none;
+  border-top-left-radius: 10px;
+}
+.fa-comment:hover, .fa-bell:hover {
+ -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  transform: scale(1.1);
+  color: #556B75;
+}
 
 
 
@@ -305,13 +380,3 @@ $colors: #E74C3C, #0072B5, #2C3E50;
 }
 
 */
-
-
-@media only screen and (min-width: 641px) and (max-width: 959px) {
-  .field {
-    width: 831px; } 
-  }
-@media only screen and (max-width: 640px) {
-    .field {
-    width: 631px; }  
-  }
