--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1412,6 +1412,14 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 	width: 100%;
 }
 
+@import url(http://fonts.googleapis.com/css?family=Open+Sans);
+@import url(http://weloveiconfonts.com/api/?family=fontawesome);
+
+/* fontawesome */
+[class*="fontawesome-"]:before {
+  font-family: 'FontAwesome', sans-serif;
+}
+
 /** Mensaje flotante */
 *, *:before, *:after {
   -moz-box-sizing: border-box;
@@ -1430,16 +1438,18 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
   box-shadow: 0 2px 10px rgba(0,0,0,0.8);
   opacity: 0.6;
   position:relative;
-  border-radius: 5%;
+  border-radius: 7px;
+  cursor: move;
+  font-family: 'Open Sans', sans-serif;
   
-	/*CENTRADO*/
-	overflow: hidden;
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	margin-top: -100px;
-	margin-left: -292px; /*150px*/
-	zoom : 1;
+  /*CENTRADO*/
+  overflow: hidden;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin-top: -100px;
+  margin-left: -292px; /*150px*/
+  zoom : 1;
   
 }
 
@@ -1476,6 +1486,8 @@ h1 {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.1);
   min-height: 100px;
   margin-bottom: 1rem;
+  font-family: 'Open Sans', sans-serif;
+  display: block;
 }
 
 button[type="button"] {
@@ -1513,25 +1525,11 @@ button:hover {
   border-color: 4px solid #98EBFF;
 }
 
-
-/*Mensaje de audio */
-@import url(http://weloveiconfonts.com/api/?family=iconicstroke|typicons);
-
-/* iconicstroke */
-[class*="iconicstroke-"]:before {
-  font-family: 'IconicStroke', sans-serif;
-}
-
-/* typicons */
-[class*="typicons-"]:before {
-  font-family: 'Typicons', sans-serif;
-}
-
 .fontawesome-bullhorn {
   font-size: 20px;
   border:none;
   background-color: transparent;
-  color: #71FF95;
+  color: #94DCFF;
   text-align: center;
   float:right;
   display:inline-block;
@@ -1544,7 +1542,7 @@ button:hover {
   font-size: 20px;
   border:none;
   background-color: transparent;
-  color: #71FF95;
+  color: #94DCFF;
   text-align: center;
   float:right;
   display:inline-block;
@@ -1558,7 +1556,7 @@ button:hover {
    font-size: 20px;
   border:none;
   background-color: transparent;
-  color: #71FF95;
+  color: #94DCFF;
   text-align: center;
   float:right;
   display:inline-block;
