--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -115,7 +115,11 @@ top.window.outerWidth = screen.availWidth;
 			});
     */
 		</script>
-		
+		<script>
+		$(function() {
+    $( "#page-wrapper" ).draggable();
+  });
+		</script>
 </head>
 
 <body>
