--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -18,7 +18,14 @@
 
     }
 
-</script>    
+</script>  
+
+    <script>
+    
+    $(function() {
+    $( "#page-wrapper" ).draggable();
+  });
+    </script>  
 
   {% if liked == True %}
 
