--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -24,15 +24,14 @@
 <script src="{{STATIC_URL}}js/noti.js"></script>
 <script src="{{STATIC_URL}}js/notia.js"></script>
 <script src="{{STATIC_URL}}js/jquery.shorten.1.0.js"></script>
+<script src="{{STATIC_URL}}js/jquery-1.10.2.js"></script>
+<script src="{{STATIC_URL}}js/jquery-ui.js"></script>
 
 <!-- NEW MENU -->
 
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-<!-- DRAG MESSAGE -->
-    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
-    <script src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
-<!-- END DRAG MESSAGE -->
+
 
 {% block include_files %}{% endblock %}
 
