--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -24,8 +24,7 @@
 <script src="{{STATIC_URL}}js/noti.js"></script>
 <script src="{{STATIC_URL}}js/notia.js"></script>
 <script src="{{STATIC_URL}}js/jquery.shorten.1.0.js"></script>
-<script src="{{STATIC_URL}}js/jquery-1.10.2.js"></script>
-<script src="{{STATIC_URL}}js/jquery-ui.js"></script>
+<script src="{{STATIC_URL}}js/drag.js"></script>
 
 <!-- NEW MENU -->
 
@@ -118,11 +117,7 @@ top.window.outerWidth = screen.availWidth;
 			});
     */
 		</script>
-<script>
-		$(function() {
-    $( "#page-wrapper" ).draggable();
-  });
-		</script>
+
 
 </head>
 
