--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -60,7 +60,7 @@
   </div>
 </div>
 <nav class="profile">
-      <li class="fa fa-envelope fa-2x"></li>
+      <li class="fa fa-envelope fa-2x" id="publish"></li>
       <li class="fa fa-home fa-2x" onclick="javascript:location.href='/"></li>
       <li class="fa fa-users fa-2x" onclick="javascript:location.href='/friends'"></li>
       <li class="fa fa-sign-out fa-2x" onclick="javascript:location.href='{% url 'account_logout' %}'"></li>
