--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -44,7 +44,21 @@
 
 {% block content %}
 
+<div id="panel" style="display:none;"> 
 
+  <div id="widget" style="display:none;"> 
+  
+    <div id="middle"></div>
+    <div id="linkedin" class="size left"><span class="entypo-users"></span></div>
+    <div id="middle"><div class="entypo-user"></div></div>
+
+    <div id="linkedin" class="size left"><a href="/friends"><span class="entypo-users"></span></a></div>
+    <div id="dribbble" class="size right"><span class="entypo-mail"></span></div>
+    <div id="facebook" class="size left"><a href="/newsevent"><span class="entypo-calendar"></span></div></a>
+    <div id="twitter" class="size right"><a href="{% url 'account_logout' %}"><span class="entypo-logout"></span></div></a>
+
+  </div>
+</div>
 <nav class="profile">
       <li class="fa fa-envelope fa-2x" id="publish2"></li>
       <li class="fa fa-home fa-2x" onclick="javascript:location.href='/"></li>
