--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -25,6 +25,8 @@
 <script src="{{STATIC_URL}}js/notia.js"></script>
 <script src="{{STATIC_URL}}js/jquery.shorten.1.0.js"></script>
 <script src="{{STATIC_URL}}js/drag.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
 
 <!-- NEW MENU -->
 
