--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -15,7 +15,7 @@
 <!--  <link rel="stylesheet" href="{{STATIC_URL}}media/bootstrap/css/bootstrap.min.css"/> -->
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" /> 
 <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>-->
-<script src="{{STATIC_URL}}js/jquery.min.js"></script>
+<!--<script src="{{STATIC_URL}}js/jquery.min.js"></script>-->
 <!--  <script src="{{STATIC_URL}}media/bootstrap/js/bootstrap.min.js"></script> -->
 <script src="{{STATIC_URL}}js/jquery.easytabs.js"></script>
 <script src="{{STATIC_URL}}js/jquery.gritter.js"></script>
