--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -15,7 +15,7 @@
 <!--  <link rel="stylesheet" href="{{STATIC_URL}}media/bootstrap/css/bootstrap.min.css"/> -->
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" /> 
 <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>-->
-<!--<script src="{{STATIC_URL}}js/jquery.min.js"></script>-->
+<script src="{{STATIC_URL}}js/jquery.min.js"></script>
 <!--  <script src="{{STATIC_URL}}media/bootstrap/js/bootstrap.min.js"></script> -->
 <script src="{{STATIC_URL}}js/jquery.easytabs.js"></script>
 <script src="{{STATIC_URL}}js/jquery.gritter.js"></script>
@@ -25,7 +25,6 @@
 <script src="{{STATIC_URL}}js/notia.js"></script>
 <script src="{{STATIC_URL}}js/jquery.shorten.1.0.js"></script>
 <script src="{{STATIC_URL}}js/drag.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
 
 <!-- NEW MENU -->
