--- a/skyfolk/static/css/widget1.css
+++ b/skyfolk/static/css/widget1.css
@@ -84,3 +84,16 @@
   color: #28546C;
   z-index: 9999;
 }
+
+
+/* MEDIAS SCREEN FOR MENU */
+
+
+  @media only screen and (min-width: 1220px) {
+    body > .profile {
+      width: 180px;
+      height: 180px;
+      right: 75px;
+      top: 90%;
+       } 
+    }
