--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -89,8 +89,8 @@
      <dropdown>
  
   <ul class="animate">
-    <li class="animate"> Mi perfil <a class="fontawesome-user"></a></li>
-    <li class="animate"> Configuracion <a href="/config/changepass" class="fontawesome-cog"></a></li>
+    <li class="animate"> Mi perfil <a  class="fontawesome-user"></a></li>
+    <li class="animate"> Configuracion <a href="/config/profile/" class="fontawesome-cog"></a></li>
     <li class="animate"> Market <a href="#market" class="fontawesome-th"></a></li>
     <li class="animeate"> Mis lazos <a href="#mislazos" class="fontawesome-link"></a></li>
     <li class="animate">Multimedia <i class="fontawesome-film"></i></li>
