--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -654,7 +654,7 @@
 			<input type="text" name="emitterid" value="{{ user.pk }}" hidden>
 		    <button type="submit" id="sendformpubli"><i class="fa fa-paper-plane"></i> Enviar</button>
 		    <!--  <input type="submit" id="sendformpubli" value="Submit Feedback" /> -->
-		    <button type="button" id="close"><i class="fa fa-remove"></i> Cerrar</button>
+		    <button type="button" id="close" class="buttonred"><i class="fa fa-remove"></i> Cerrar</button>
 		    <button class="fontawesome-bullhorn"></button>
 		    <button class="fontawesome-camera"></button>
 		    <button class="fontawesome-map-marker"></button>
