--- a/skyfolk/static/css/configuracion.css
+++ b/skyfolk/static/css/configuracion.css
@@ -1,36 +1,44 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400);
+
 @import url(http://weloveiconfonts.com/api/?family=entypo);
+
 @import url(http://fonts.googleapis.com/css?family=Gafata);
+
 @import url(http://weloveiconfonts.com/api/?family=entypo);
+
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300);
+
 @import url(http://fonts.googleapis.com/css?family=Gafata);
+
 @import url(http://fonts.googleapis.com/css?family=Carrois+Gothic+SC);
 
 /* entypo */
 [class*="entypo-"]:before {
-  font-family: 'entypo', sans-serif;
+	font-family: 'entypo', sans-serif;
 }
 
 /* entypo */
 [class*="entypo-"]:before {
-  font-family: 'entypo', sans-serif;
+	font-family: 'entypo', sans-serif;
 }
+
 body {
-background-image:url('http://upload.wikimedia.org/wikipedia/en/7/75/DowntownSF.jpg');
+	background-image:
+		url('http://upload.wikimedia.org/wikipedia/en/7/75/DowntownSF.jpg');
 }
 
 span.entypo-cog {
-font-size: 35px;
-color: #5AC3FF;
-position: relative;
-float:left;
-margin-top: 35px;
-margin: 28px;
-
+	font-size: 35px;
+	color: #5AC3FF;
+	position: relative;
+	float: left;
+	margin-top: 35px;
+	margin: 28px;
 }
+
 span.entypo-cog a {
-position:relative;
-font-family: 'Gafata', sans-serif;
+	position: relative;
+	font-family: 'Gafata', sans-serif;
 }
 /*Cuerpo*/
 /*#pass {
@@ -39,131 +47,133 @@ top: 40%;
 position: absolute;
 width:270px;
 }*/
-
 .actual {
-color: black;
-min-width: 120px;
-border-radius: 3px;
-text-shadow: rgb(150,150,150) 1px 1px 1px;
-margin-bottom: 25px;
-
-display:block;
-margin-left:60px;
-margin-top:10px;
-font-family: 'Open Sans', sans-serif;
+	color: black;
+	min-width: 120px;
+	border-radius: 3px;
+	text-shadow: rgb(150, 150, 150) 1px 1px 1px;
+	margin-bottom: 25px;
+	display: block;
+	margin-left: 60px;
+	margin-top: 10px;
+	font-family: 'Open Sans', sans-serif;
 }
+
 .actual:focus {
-border-color: blue;
-border: 2px solid #6AFA9D;
-box-shadow: rgb(150,150,150) 1px 1px;
+	border-color: blue;
+	border: 2px solid #6AFA9D;
+	box-shadow: rgb(150, 150, 150) 1px 1px;
 }
+
 #float {
-
-font-size: 15px;
-font-family: 'Gafata', sans-serif;
-margin: -30px;
-padding-right: 5px;
-background: #FFFFFF;
-border: 50px solid #FFF;
-border-radius: 8px 8px 8px 8px;
-box-shadow: rgb(196,196,196) 5px 5px;
+	font-size: 15px;
+	font-family: 'Gafata', sans-serif;
+	margin: -30px;
+	padding-right: 5px;
+	background: #FFFFFF;
+	border: 50px solid #FFF;
+	border-radius: 8px 8px 8px 8px;
+	box-shadow: rgb(196, 196, 196) 5px 5px;
 }
+
 #btn {
-color:#0f4b6d;
-border:1px solid #84acc3;
-background-image:	 url('http://cssdeck.com/uploads/media/items/6/6Wl44TI.png'),
--moz-radial-gradient(	center bottom, circle,
-rgba(89,208,244,1) 0,rgba(89,208,244,0) 100px),
--moz-linear-gradient(#4fbbf7, #3faeeb);
-
--webkit-gradient(	radial, 50% 100%, 0, 50% 100%, 100,from(rgba(89,208,244,1)), to(rgba(89,208,244,0))),
--webkit-gradient(linear, 0% 0%, 0% 100%, from(#4fbbf7), to(#3faeeb));
+	color: #0f4b6d;
+	border: 1px solid #84acc3;
+	background-image:
+		url('http://cssdeck.com/uploads/media/items/6/6Wl44TI.png'),
+		-moz-radial-gradient(center bottom, circle, rgba(89, 208, 244, 1) 0,
+		rgba(89, 208, 244, 0) 100px), -moz-linear-gradient(#4fbbf7, #3faeeb);
+	-webkit-gradient ( radial, 50% 100%, 0, 50% 100%,
+	100,from(rgba(89,208,244,1)), to(rgba(89,208,244,0))),
+	-webkit-gradient(linear, 0% 0%, 0% 100%, from(#4fbbf7), to(#3faeeb));
 	/* Animacion */
-		-webkit-transition:background-position 3s;
-	-moz-transition:background-position 3s;
-	transition:background-position 3s;
-
-	
-border-radius: 5px;
-width: 170px;
-height: 50px;
-font-family: 'Open Sans', sans-serif;
-font-size: 15px;
-color: white;
-background-color: #303F73;
-
-display:block;
-margin:0 auto 0 auto;
-margin-top:20px;
-
-text-decoration:none !important;
-	white-space:nowrap;
-	
-	display:inline-block;
-	vertical-align:baseline;
-	position:relative;
-	cursor:pointer;
-	padding:10px 20px;
-	
-	background-repeat:no-repeat;
+	-webkit-transition: background-position 3s;
+	-moz-transition: background-position 3s;
+	transition: background-position 3s;
+	border-radius: 5px;
+	width: 170px;
+	height: 50px;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 15px;
+	color: white;
+	background-color: #303F73;
+	display: block;
+	margin: 0 auto 0 auto;
+	margin-top: 20px;
+	text-decoration: none !important;
+	white-space: nowrap;
+	display: inline-block;
+	vertical-align: baseline;
+	position: relative;
+	cursor: pointer;
+	padding: 10px 20px;
+	background-repeat: no-repeat;
 	transition: all .3s ease-in;
+}
 
-}
 #btn:hover {
-	background-color:#265B6A;
-	
+	background-color: #265B6A;
 }
+
 #btn:active {
-bottom: -2px;
+	bottom: -2px;
 }
+
 #contra {
-/*top: -10px;*/
-width: 470px;
-height: auto;
-/*margin-left: 385px;*/
-/*margin-top: -380px;*/
-font-family: 'Gafata', sans-serif;
-/*right: 100px;*/
-/*padding-right: 50px;*/
-background: #FFFFFF;
-border: 50px solid #FFF;
-border-radius: 8px 8px 8px 8px;
-box-shadow: rgb(196,196,196) 5px 5px;
-position: absolute;
-top:10%;
-left:40%;
+	/*top: -10px;*/
+	width: 470px;
+	height: auto;
+	/*margin-left: 385px;*/
+	/*margin-top: -380px;*/
+	font-family: 'Gafata', sans-serif;
+	/*right: 100px;*/
+	/*padding-right: 50px;*/
+	background: #FFFFFF;
+	border: 50px solid #FFF;
+	border-radius: 8px 8px 8px 8px;
+	box-shadow: rgb(196, 196, 196) 5px 5px;
+	position: absolute;
+	top: 10%;
+	left: 40%;
 }
+
 #cn {
-font-size: 20px;
-text-shadow: grey 0.5px 0.5px 0.5px;
-color: grey;
-margin: 5px;
+	font-size: 20px;
+	text-shadow: grey 0.5px 0.5px 0.5px;
+	color: grey;
+	margin: 5px;
 }
-#ch { 
-font-size: 12px;
-text-shadow: grey 0.2px 0.2px 0.2px;
-color: grey;
-margin: 6px;
-margin-top: 20px;
+
+#ch {
+	font-size: 12px;
+	text-shadow: grey 0.2px 0.2px 0.2px;
+	color: grey;
+	margin: 6px;
+	margin-top: 20px;
 }
+
 div.wrapper {
-	position:relative;
+	position: relative;
 	display: block;
 	background-color: #FAFAFA;
 	height: auto;
 	width: auto;
-	clear:both;
+	clear: both;
 }
 
-
-@media (min-width: 1200px) {
+@media ( min-width : 1200px) {
 	#contra {
 		height: 1320px;
 	}
 }
 
-@media (min-width: 768px) and (max-width: 979px) {
+@media ( min-width : 768px) and (max-width: 979px) {
 	#contra {
 		height: 1500px;
 	}
+}
+
+#imagecroptool {
+	height: 300px;
+	width: 300px;
 }
