--- a/Plantillas sin usar/Mensajes privados/mp.css
+++ b/Plantillas sin usar/Mensajes privados/mp.css
@@ -138,6 +138,7 @@ div {
 		word-wrap: break-word;
 		margin-bottom: 20px;
         line-height: 25px;
+        font-size: 17px;
 	}
 .clear {clear: both}
 .me {
