--- a/Plantillas sin usar/novedades/main.css
+++ b/Plantillas sin usar/novedades/main.css
@@ -15,17 +15,17 @@ body, html {
 body {
 	font-family: 'Open Sans', sans-serif;
 	color: #aaaeb2;
-	background: #e5ded8;
+	background: #fcfcfc;
 }
 
 a {
 	color: #888;
 	text-decoration: none;
 }
-h2 {
+h3 {
     border-bottom: 1px solid #DDDDDD;
-    color: #666666;
-    font-family: 'Cherry Swash',cursive;
+    color: rgba(44,44,44,0.777);
+    font-family: 'Open Sans', sans-serif;
     font-size: 43px;
     padding-bottom: 13px;
     text-align: center;
@@ -260,4 +260,107 @@ figcaption span {
 	height: 260px;
 	top: -47px;
 	outline: none;
+}
+/* nav */
+.box-tool {
+  width: 100%;
+  height: 40px;
+  background-color: #fff;
+  box-shadow: 1px 1px 1px #f0f0f0;
+  list-style-type: none;
+  position: fixed;
+  margin-top: -40px;
+  z-index: 9999;
+}
+.box-tool li:nth-child(1) {
+  position: relative;
+  margin: auto;
+  width: 40px;
+  height: 40px;
+  background-image: url('http://s11.postimg.org/58jltbaqb/logo.png');
+  background-repeat: no-repeat;
+  background-size: 120px;
+  background-position: center;
+  background-color: transparent;
+  border: none;
+    -webkit-transition: all .3s linear;
+  -moz-transition: all .3s linear;
+  transition: all .3s linear;
+  top: 0px;
+}
+.box-tool .chat {
+  width: 40px;
+  height: 40px;
+  background-image:url('http://s27.postimg.org/mu9viuten/1418959285_357941.png');
+  border: none;
+  position: relative;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position:center;
+  background-color: transparent;
+  margin: auto;
+  top: -40px;
+  float: right;
+  right: 20px;
+}
+.box-tool li:hover {
+   -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+    transform:scale(1.1);
+  border: none;
+  background-color: transparent;
+}
+.box-tool li img {
+  position: relative;
+  width: 120px;
+  height: 120px;
+}
+.opciones {
+	display: block;
+	position: relative;
+	margin: auto;
+	float: right;
+	top: -100px;
+}
+.opciones ul {
+	list-style-type: none;
+}
+.opciones li {
+	display: inline-block;
+}
+.popular {
+	background-image: url("images/heart.ico");
+	width: 40px;
+	height: 40px;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 50%;
+	margin-right: 7px;
+}
+.actividad {
+    background-image: url("images/user.ico");
+	width: 40px;
+	height: 40px;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 50%;
+	margin-right: 7px;
+}
+.descubre {
+	 background-image: url("images/user.ico");
+	width: 40px;
+	height: 40px;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 50%;
+	margin-right: 7px;
+}
+.novedades {
+    background-image: url("images/user.ico");
+	width: 40px;
+	height: 40px;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 50%;
+	margin-right: 7px;
 }
